# wholebody

qp_solver/: CMakeLists.txt  package.xml  setup.cfg  setup.py
qp_solver/scripts/: franka_solver.py
wholebody_control/: CMakeLists.txt  package.xml
wholebody_control/include/wholebody_control/: franka_ros2_bridge.hpp
wholebody_control/src/: franka_control.cpp  franka_ex.cpp  franka_rl_control.cpp
